# Semanticlip

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  embedding.py  pyproject.toml  requirements.txt
src/: .env  app.py  config.py  database.py  embedding.py  model.py  search.py
